--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ hdrhistogram = "6.3"
 http = "0.2"
 hyper = "0.13"
 hyper-tls = "0.4"
+openssl = { version = "0.10", features = ["vendored"] }
 tokio = { version = "0.2.6", features = ["macros", "io-std", "time", "rt-core", "rt-threaded"] }
 url = "2.1"
